--- a/styles/style.css
+++ b/styles/style.css
@@ -25,20 +25,18 @@
   top: 30px;
   left: 64px;
  }
- .title-row{
+ .header__title{
+  font-size: 102px;
+  line-height: 96px;
+  font-weight: 600;
+  margin-left: 64px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   height: 100%;
   width: 730px;
  }
- .header__title{
-  font-size: 102px;
-  line-height: 96px;
-  font-weight: 600;
-  margin-left: 64px;
- }
-.subtitle{
+.header__subtitle{
   position: absolute;
   bottom:30px;
   left:64px;
@@ -51,7 +49,7 @@
   text-decoration: none;
   color: #2f80ed;
 }
-.main-illustration{
+.header__main-illustration{
   position: absolute;
   bottom: 0;
   right: 0;
@@ -59,7 +57,7 @@
   height: 608px;
   z-index: 2;
 }
-.square-pic{
+.header__square-pic{
   position: absolute;
   right: 0;
   top:64px;
@@ -79,7 +77,7 @@
   width: 80%;
   margin: 0 auto;
 }
-.brief__two-columns{
+.two-columns__brief{
   width: 175px;
   line-height: 1.2;
   font-size: 18px;
@@ -87,24 +85,23 @@
   color: #2f80ed;
 
 }
-.main-text__two-columns{
+.two-columns__main-text{
   width: 80%;
   min-width: 784px;
   line-height: 34px;
   font-size: 24px;
   font-weight: normal;
 }
-
-.span-accent__two-columns{
+.two-columns__paragraph{
+  margin-bottom: 30px;
+}
+.two-columns__paragraph:last-of-type{
+  margin-bottom:0;
+}
+.two-columns__span-accent{
   line-height: 34px;
   font-size: 24px;
   font-weight: 600;
-}
-.paragraph__two-columns{
-  margin-bottom: 30px;
-}
-.paragraph__two-columns:last-of-type{
-  margin-bottom:0;
 }
 .digits{
   text-align: center;
@@ -117,14 +114,14 @@
   margin-bottom: 100px;
 
 }
-.cell__table{
+.table__cell{
   width: 250px;
 }
-.table_row{
+tr{
   display: flex;
   justify-content: space-between;
 }
-.table_row:first-of-type{
+.digits__row{
   margin: 60px 0 60px 0;
 }
 .section-title{
@@ -143,7 +140,7 @@
   margin: 0 auto;
 
 }
-.heading__table{
+.table__heading{
   line-height: 1.15;
   font-size: 24px;
   font-weight: 600;
@@ -151,17 +148,13 @@
   padding-top: 0;
   text-align: left;
 }
-.text__table{
+.table__text{
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
   margin-top:20px;
   text-align: left;
   
-}
-.cell_row-first{
-  display: flex;
-  justify-content: space-between;
 }
 .feynman{
 background-color: #f2f2f2;
@@ -171,7 +164,7 @@ left: 0;
 height: 890px;
 z-index: -2;
 }
-.title__feynman{
+.feynman__title{
   text-align: center;
   margin: 0 auto;
   padding-top: 100px;
@@ -180,7 +173,7 @@ z-index: -2;
   font-size: 120px;
   font-weight: 600;
 }
-.subtitle__feynman{
+.feynman__subtitle{
   margin: 0 auto;
   margin-top:70px;
   text-align: center;
@@ -188,7 +181,7 @@ z-index: -2;
   font-size: 36px;
   font-weight: normal;
 }
-.link__feynman{
+.feynman__link{
   position: absolute;
   top: 50%;
   right: 48px;
@@ -198,7 +191,7 @@ z-index: -2;
   font-size: 36px;
   font-weight: normal;
 }
-.picture__feynman{
+.feynman__picture{
   position: absolute;
   bottom:0;
   left: 0;
@@ -229,37 +222,34 @@ z-index: -2;
   font-weight: normal;
 
 }
-.triangle__kaufman{
+.kaufman__triangle{
   position: absolute;
   top: 0;
   right: -210px;
   z-index: -1;
+  width: 877px;
+  height: 877px;
 }
-
 
 .table_theme_dark{
   margin-bottom: 0;
 }
-.cell__table_theme_dark{
+.table__cell_theme_dark{
   margin-top: 80px;
   width: 200px;
 }
-.heading__table-theme-dark{
+.table__heading_theme_dark{
 margin:0 0 20px 0;
 line-height: 1.15;
 font-size: 24px;
 font-weight: 600;
 }
-.text__table-theme-dark{
+.table__text_theme_dark{
   margin: 0;
   padding: 0;
   line-height: 1.2;
   font-size: 18px;
   font-weight: normal;
-}
-.table_row_theme_dark:first-of-type{
-  margin: 0;
-
 }
 
 .footer{
@@ -269,46 +259,46 @@ font-weight: 600;
   min-height: 250px;
 
 }
-.columns__footer{
+.footer__columns{
   width: 90%;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
 
 }
-.column__footer_content_copyright{
+.footer__column_content_copyright{
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   flex-basis:711px;
   min-height: 250px;
 }
-.author__footer{
+.footer__author{
   margin: 18px 0 18px 0;
   line-height: 25px;
   font-size: 18px; 
   font-weight: normal;
 }
-.columns-link__footer{
+.footer__columns-link{
   display: flex;
   flex-direction: column;
 }
-.column-heading__footer{
+.footer__column-heading{
   margin-bottom: 20px;
   line-height: 30px;
   font-size: 18px;
   font-weight: 600;
 }
-.columns-link__footer{
+.footer__column-link{
   margin-bottom: 16px;
 }
-.column-link__footer{
+.footer__column-link{
   text-decoration: none;
   line-height: 30px;
   font-size: 18px;
   font-weight: normal;
   color: white;
 }
-.social-icon__footer{
+.footer__social-icon{
   margin-right: 10px;
 }
